--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "google-home-notifier",
-  "version": "1.2.0",
+  "name": "google-home-notifier-mdnsjs",
+  "version": "1.0.0",
   "description": "",
   "main": "google-home-notifier.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Noel Portugal",
+  "author": "Taichiro Kosugi",
   "keywords": [
     "google home",
     "notifications",
@@ -18,7 +18,7 @@
     "castv2-client": "^1.1.2",
     "express": "^4.14.0",
     "google-tts-api": "0.0.2",
-    "mdns": "^2.3.3",
+    "mdns-js": "~1.0.1",
     "ngrok": "^2.2.4"
   }
 }
