--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "body-parser": "^1.15.2",
     "castv2-client": "^1.1.2",
     "express": "^4.14.0",
-    "google-tts-api": "0.0.2",
+    "google-gax": "^0.16.1",
+    "grpc": "^1.12.2",
     "mdns-js": "~1.0.1",
-    "ngrok": "^2.2.4"
+    "ngrok": "^2.2.4",
+    "@google-cloud/text-to-speech": "~0.1.0"
   }
 }
