--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.15.2",
     "castv2-client": "^1.1.2",
     "express": "^4.14.0",
+    "fs": "0.0.1-security",
     "mdns-js": "~1.0.1",
     "ngrok": "^2.2.4"
   }
