--- a/package.json
+++ b/package.json
@@ -14,11 +14,9 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "castv2-client": "^1.1.2",
-    "express": "^4.14.0",
+    "castv2-client": "^1.2.0",
     "fs": "0.0.1-security",
-    "mdns-js": "~1.0.1",
-    "ngrok": "^2.2.4"
+    "mdns-js": "^1.0.1",
+    "request": "^2.87.0"
   }
 }
